restart loop without refreshing the page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </section>
         <section>
             <p>Your guesses so far: <span id="userGuess"></span></p>
-            <p>Guesses left: <span id="guessesLeft">9</span></p>
+            <p>Guesses left: <span id="guessesLeft"></span></p>
         </section>
     </div>
     <script src="assets/javascript/game.js"></script>
